--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,14 +1,28 @@
-<p style="color: green"><%= notice %></p>
+<div class="m-5 p-5">
+<h1>Foods by the current user:</h1>
+<table class="table table-striped table-hover" data-toggle="table">
+      <thead>
+        <tr>
+          <th>Food</th>
+          <th>Measurement Unit</th>
+          <th>Unit Price</th>
+          <th>Quantity</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @foods.each do |food| %>
+          <tr>
+            <td><%= food.name %></td>
+            <td><%= food.measurement_unit %></td>
+            <td><%= food.price %></td>
+            <td><%= food.quantity %></td>
+            <td><%= button_to 'Delete', food_path(food.id), method: :delete %></td>
+          </tr>
+        <% end %>
+      </tbody>
+</table>
 
-<h1>Foods</h1>
-
-<div id="foods">
-  <% @foods.each do |food| %>
-    <%= render food %>
-    <p>
-      <%= link_to "Show this food", food %>
-    </p>
-  <% end %>
+<%= link_to "New food", new_food_path, class: "btn btn-info" %>
 </div>
 
-<%= link_to "New food", new_food_path %>
