--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,9 +1,31 @@
+<div class="m-5 p-5">
 <h1>New recipe</h1>
 
 <%= render "form", recipe: @recipe %>
+
+<%= bootstrap_form_with(model: Recipe.new) do |r| %>
+  <div>
+    <%= r.text_field :name %>
+  </div>
+    <div>
+    <%= r.time_field :preparation_time %> 
+  </div>
+  <div>
+    <%= r.time_field :cooking_time %>
+  </div>
+  <div>
+    <%= r.text_field :description %>
+  </div>
+
+<% end %>
+
+<br>
+
+<div>
 
 <br>
 
 <div>
   <%= link_to "Back to recipes", recipes_path %>
+</div>
 </div>
