--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -13,7 +13,7 @@
           </tr>
       </thead>
       <tbody>
-        <% @recipe.each do |rec| %>
+        <% @recipes.each do |rec| %>
           <tr>
             <td><%= rec.name %></td>
             <td><%= rec.preparation_time %></td>
