--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -23,6 +23,6 @@
       </tbody>
 </table>
 
-<%= link_to "New food", new_food_path, class: "btn btn-info" %>
+<%= link_to "New food test", new_food_path, class: "btn btn-info" %>
 </div>
 
