--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,35 +1,27 @@
-<div class="m-5 p-5">
-<h1>New recipe</h1>
-
-<%= bootstrap_form_with(model: @user.recipes.new) do |r| %>
-  <div>
-    <%= r.text_field :name %>
-  </div>
-    <div>
-    <%= r.time_field :preparation_time %>
-  </div>
-  <div>
-    <%= r.time_field :cooking_time %>
-  </div>
-  <div>
-    <%= r.text_field :description %>
-  </div>
-  <div>
-    <%= r.check_box :public, class: 'form-check-input', id: 'flexSwitchCheckDefault' %>
-  </div>
-  <div>
-    <%= r.submit %>
-  </div>
-
-<% end %>
-
-<br>
-
-<div>
-
-<br>
-
-<div>
-  <%= link_to "Back to recipes", recipes_path %>
+<div class="container border">
+    <h2>Add new recipe</h2>
+    <%= form_with model: Recipe.new, class: "my-4" do |f| %>
+        <div class="mb-3">
+            <%= f.label :name, class: "form-label" %>
+            <%= f.text_field :name, class: "form-control" %>
+        </div>
+        <div class="mb-3">
+            <%= f.label :preparation_time, class: "form-label" %>
+            <%= f.text_field :preparation_time, class: "form-control" %>
+        </div>
+        <div class="mb-3">
+            <%= f.label :cooking_time, class: "form-label" %>
+            <%= f.text_field :cooking_time, class: "form-control" %>
+        </div>
+        <div class="mb-3">
+            <%= f.label :description, class: "form-label" %>
+            <%= f.text_field :description, class: "form-control" %>
+        </div>
+        <div class="checkbox form-check form-switch mb-3">
+            <%= f.label :public, class: 'form-check-label', for: 'flexSwitchCheckDefault' %>
+            <%= f.check_box :public, class: 'form-check-input', id: 'flexSwitchCheckDefault' %>
+        </div>
+        <%= f.submit class: "btn btn-primary" %>
+    <% end %>
 </div>
-</div>
+
