ADd Detail recipes

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -27,7 +27,7 @@
 <%= link_to "Detail recipe", new_recipe_path %>
 <% @recipes.each do |r|%>
   <%= link_to recipe_path(r.id) do%>
-    <%= render r %>
+    <%= render recipe %>
   <%end%>
 <%end%>
 </div>
