--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,8 +1,15 @@
-
-   <p> <%= recipe.name %></p>
-  <div>
-    <p><%= link_to 'Delete', { action: :destroy, id: recipe.id }, method: :delete%></p>
-
-</div><p><strong>description</strong></p>
+<div class="container border mb-5">
+<div class="align-items-center row p-3">
+  <div class="col mb-2">
+    <h2>
+    <%= recipe.name %>
+    </h2>
+    <%= link_to 'Remove', { action: :destroy, id: recipe.id }, method: :delete%>
+  </div>
+  <div class="col mt-1 p-2">
+    <p>
     <%= recipe.description %>
-  
+  </p>
+  </div>
+</div>
+</div>
