style show file

--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,5 +1,5 @@
 <div class="container border mb-5">
-<div class="align-items-center row p-3">
+<div class="d-flex align-items-center row p-3">
   <div class="col mb-2">
     <h2>
     <%= recipe.name %>
