--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,5 +1,5 @@
 <div class="m-5 p-5">
-<h1>New recipe</h1>
+<h1>Add new recipe</h1>
 
 <%= bootstrap_form_with(model: @user.recipes.new) do |r| %>
   <div>
