--- a/app/views/recipes/_recipe.html.erb
+++ b/app/views/recipes/_recipe.html.erb
@@ -1,10 +1,12 @@
 <div class="container border mb-5">
 <div class="d-flex align-items-center row p-3">
   <div class="col mb-2">
+  <%= link_to recipe_path(recipe.id) do%>
     <h2>
     <%= recipe.name %>
     </h2>
-    <%= link_to 'Remove', { action: :destroy, id: recipe.id }, method: :delete%>
+    <%end%>
+    <%= button_to 'Remove', { action: :destroy, id: recipe.id }, method: :delete%>
   </div>
   <div class="col mt-1 p-2">
     <p>
