--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -32,3 +32,29 @@
     <% end %>
   </table>
 </div>
+
+
+
+<h1>Recipes</h1>
+
+<table class="table table-striped table-hover" data-toggle="table">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th>preparation time</th>
+          <th>cooking time</th>
+          <th>description</th>
+          </tr>
+      </thead>
+      <tbody>
+        <% @recipes.each do |recipe| %>
+          <tr>
+            <td><%= recipe.name %></td>
+            <td><%= recipe.preparation_time %></td>
+            <td><%= recipe.cooking_time %></td>
+            <td><%= recipe.description %></td>
+             <td><%= button_to 'Delete', recipe_path(recipe.id), method: :delete %></td>
+          </tr>
+        <% end %>
+      </tbody>
+</table>
