Add semantical names

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,6 +1,8 @@
 <div class="m-5 p-5">
 
-<%= link_to "New Recipe", new_recipe_path %>
-<% @recipes.each do |det|%>
+<%= link_to "Add New Recipe", new_recipe_path %>
+<% @recipes.each do |recipe|%>
+    <%= render recipe %>
+
 <%end%>
 </div>
