--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,6 +1,6 @@
 <div class="m-5 p-5">
 
-<%= link_to "Add New Recipe", new_recipe_path %>
+<p><%= link_to "Add New Recipe", new_recipe_path,class:"btn btn-info" %></p>
 <% @recipes.each do |recipe|%>
     <%= render recipe %>
 
