--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,19 +1,19 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-dark">
   <div class="container-fluid">
-  <h1>Recipe Group Project</h1>
+  <h1 class="text-light">Recipe Group Project</h1>
   <% if current_user %>
-    <%= link_to "Recipes group project", user_session_path, class: "me-1" %>
-    <%= link_to 'My Recipes', recipes_path, class: "me-1" %>
+    <%= link_to "Recipes group project", user_session_path, class: "text-primary me-1" %>
+    <%= link_to 'My Recipes', recipes_path, class: "me-1 text-primary" %>
     <%= link_to "General Shopping List", "/general_shopping_list", class: "me-1" %>
-    <%= link_to 'Food List', foods_path, class: "me-1"%>
+    <%= link_to 'Food List', foods_path, class: "me-1 text-primary"%>
   <% end %>
-  <%= link_to link_to 'Public recipes', public_recipes_path, class: "me-1" %>
+  <%= link_to link_to 'Public recipes', public_recipes_path, class: "me-1 text-primary" %>
   <div>
     <% if current_user %>
-      <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete }, class: "me-5"%>
+      <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete }, class: "me-5 text-primary"%>
     <% else %>
       <% if current_page?(new_user_session_path) %>
-        <%= link_to "Sign up", new_user_registration_path, class: "me-1" %>
+        <%= link_to "Sign up", new_user_registration_path, class: "me-1 text-primary" %>
       <% elsif current_page?(new_user_registration_path) %>
         <%= link_to "Sign in", new_user_session_path, class: "me-1" %>
       <% end %>
