update shopping list path

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -4,7 +4,7 @@
   <% if current_user %>
     <%= link_to "Recipes group project", user_session_path, class: "text-primary me-1" %>
     <%= link_to 'My Recipes', recipes_path, class: "me-1 text-primary" %>
-    <%= link_to "General Shopping List",shopping_list_path, class: "me-1" %>
+    <%= link_to "General Shopping List",shopping_list_index_path, class: "me-1" %>
     <%= link_to 'Food List', foods_path, class: "me-1 text-primary"%>
   <% end %>
   <div>
