--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -27,7 +27,7 @@
       <th>Action</th>
     </tr>
     </thead>
-    <% @recipe_foods.each do |recipe_food| %>
+    <% @recipe.recipe_foods.each do |recipe_food| %>
       <%= render recipe_food %>
     <% end %>
   </table>
